sdk/src/snapshots/touchportal_sdk__settings__tests__serialize_example_setting.snap
---
source: sdk/src/settings.rs
expression: setting
---
{
  "name": "Age",
  "default": "23",
  "type": "number",
  "maxLength": 20,
  "isPassword": false,
  "readOnly": false,
  "minValue": 0.0,
  "maxValue": 120.0
}
